python-web-server/tests/requests/invalid/002.py
from web_server.http.errors import InvalidRequestLine

request = InvalidRequestLine
